...
    int? userId = await getUserId();

    showDialog(
      context: context,
      builder: (context) {
        return AlertDialog(
          title: Text('Add New Event'),
          backgroundColor: Colors.white.withOpacity(0.6),
          content: Form(
            key: _formKey,
            child: Column(
              mainAxisSize: MainAxisSize.min,
              children: [
...

                  // Show confirmation dialog for publishing
                  final shouldPublish = await showDialog<bool>(
                    context: context,
                    builder: (context) {
                      return AlertDialog(
                        title: Text('Publish Event'),
                        content: Text('Do you want to publish this event to your Friends?'),
                        actions: [
                          TextButton(
                            onPressed: () => Navigator.of(context).pop(false), // No
                            child: Text('No'),
                          ),
                          TextButton(
                            onPressed: () => Navigator.of(context).pop(true), // Yes
                            child: Text('Yes'),
                          ),
                        ],
                      );
                    },
                  );

...
                    newEvent['isPublished'] = true;

                    // Publish to Firestore with the same ID as SQL
                    await firestoreHelper.syncEvents([newEvent]);

                    ScaffoldMessenger.of(context).showSnackBar(
                      SnackBar(content: Text('Event published to Friends!')),
                    );
                    print("Event published to Friends!");
                  } else {
                    ScaffoldMessenger.of(context).showSnackBar(
                      SnackBar(content: Text('Event saved for you only!')),
                    );
...
                  // If validation fails, show a message
                  ScaffoldMessenger.of(context).showSnackBar(
                    SnackBar(content: Text('Please fill in all required fields.')),
                  );
                }
              },// Reload events
              child: Text('Add'),
            ),
            TextButton(
              onPressed: () => Navigator.pop(context),
              child: Text('Cancel', style: TextStyle(color: Colors.black87)),
            ),
          ],
...
                              searchQuery = query;
                            });
                            loadEvents(searchQuery: searchQuery); // Implement search logic
                          },
                          decoration: InputDecoration(
                            contentPadding: EdgeInsets.all(16.0),
                            hintText: 'Search',
                            hintStyle: TextStyle(color: Colors.black87,fontWeight: FontWeight.bold),
                            border: InputBorder.none,
                            suffixIcon: Icon(Icons.search),

                          ),
                        ),
...
