...
  @override
  Widget build(BuildContext context) {
    final screenHeight = MediaQuery.of(context).size.height;
    return Scaffold(
      appBar: AppBar(
        title: Text(
          "Profile",
          style: TextStyle(color: Colors.white, fontSize: 24, fontWeight: FontWeight.bold),
        ),
        backgroundColor: Colors.black87,
        iconTheme: IconThemeData(color: Colors.white),
      ),
      body: Stack(
...
                              _navigateWithFade(context, '/MypledgedGifts');
                            },
                          ),
                          Divider(color: Colors.grey[300]),
                          ListTile(
                            title: Text(
                              "Logout",
                              style: TextStyle(fontSize: 18, fontWeight: FontWeight.w500, color: Colors.red),
                            ),
                            trailing: Icon(Icons.logout, color: Colors.red),
                            onTap: _logOut,
                          ),
                          Divider(color: Colors.grey[300]),
...
