...
        elevation: 0,
        iconTheme: IconThemeData(color: Colors.white),
      ),
      floatingActionButton: FloatingActionButton.extended(
        onPressed: () =>  _navigateWithFade(context, '/eventList'),
        label: Text(
          'Create Event/List',
          style: TextStyle(fontSize: 16, color: Colors.black87),
        ),
        icon: Icon(Icons.add, color: Colors.black87),
        backgroundColor: Colors.white.withOpacity(0.6),
      ),
      body: Stack(
...
                ),
              ),
              SizedBox(height: 7),
              Padding(
                padding:  EdgeInsets.symmetric(vertical: screenHeight * 0.001,horizontal: screenWidth * 0.04),
                child: Text(
                  'Friends',
                  style: TextStyle(fontSize: 22,
                      fontWeight: FontWeight.bold,
                      color: Colors.black87),
                ),
              ),
              SizedBox(height: 10),
...
